--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
       });
     }
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCT1bnH6x0wAPaqG7PIdusRiTPNzqLqqeM"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
